# cookiecutter-pypackage

./: cookiecutter.json  pyproject.toml
kata_3/: LICENSE  NOTES.md  pyproject.toml
kata_3/.github/workflows/: python-test.yml
kata_3/src/kata_3/: ATM.py
kata_3/test/: test_suite.py
kata_green_valley/: NOTES.md  pyproject.toml
kata_green_valley/.github/workflows/: python-test.yml
kata_green_valley/src/kata_green_valley/: green_valley.py
kata_green_valley/test/: test_suite.py
{{cookiecutter.project_slug}}/: pyproject.toml
