[tool.poetry]
name = "kata3"
version = "0.1.0"
description = ""
authors = ["Daniel Novák <daniel.novak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
